Null handling.
Write a Java program to create a generic method that alternately merges two lists while gracefully handling null elements.